tests/validTest/validNullPtrAssign.q
def void test(){
    sint8* a
    a = new sint8[3]
    a[1] = 0
}